--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,3 +3,4 @@ compatibility_flags = ["nodejs_compat"]
 compatability_date : "2024-09-02"
 pages_build_output_dir = "./build/client/"
 send_metrics = false
+account_id = "8c5de92b8968ca2966023ef960ff0ed0"
